# book-instance-seg

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  reference.md
src/: main.py
src/book-yolo8m-seg/train/: args.yaml  results.csv
src/runs/detect/train/: args.yaml
src/runs/detect/train2/: args.yaml
src/runs/detect/train3/: args.yaml
src/runs/detect/train4/: args.yaml
src/runs/detect/train5/: args.yaml
src/runs/detect/train6/: args.yaml
src/runs/detect/train7/: args.yaml
src/runs/detect/train8/: args.yaml
src/runs/detect/train9/: args.yaml  results.csv
src/runs/segment/train/: args.yaml
src/runs/segment/train2/: args.yaml
src/runs/segment/train3/: args.yaml  results.csv
src/wandb/: latest-run
src/wandb/run-20230814_140608-ol968ktx/: run-ol968ktx.wandb
src/wandb/run-20230814_140608-ol968ktx/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
